deploy/k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feed-fiddler-web
spec:
  selector:
    app: feed-fiddler-web
  ports:
    - port: 80
      targetPort: 80
